--- a/src/components/Index/SingleSubIndex.css
+++ b/src/components/Index/SingleSubIndex.css
@@ -57,7 +57,7 @@ button {
     font-size: 14px;
     background-color: #ffffff;
     color: #316fb3;
-    margin: 0 18% 5% 18%;
+    margin: 5% 18% 5% 18%;
     font-weight: 400;
     -webkit-transition: all, 0.3s;
     -moz-transition: all, 0.3s;
