--- a/src/components/Index/SingleSubIndex.scss
+++ b/src/components/Index/SingleSubIndex.scss
@@ -38,7 +38,7 @@
     font-size: 14px;
     background-color: $white-color;
     color: $main-color;
-    margin: 0 18% 5% 18%;
+    margin: 5% 18% 5% 18%;
     font-weight: 400;
     @include transition(all, 0.3s);
   }
