--- a/src/components/Index/SingleSubIndex.css
+++ b/src/components/Index/SingleSubIndex.css
@@ -23,21 +23,36 @@ button {
   background-color: #ffffff;
   cursor: pointer;
   text-align: center; }
-  .single-sub:hover .intro {
-    color: #316fb3;
+  .single-sub .single-sub-wrapper {
+    border: 1px #316fb3 solid;
+    border-radius: 100px;
+    margin: 4% 4%;
+    padding: 2% 0;
     -webkit-transition: all, 0.3s;
     -moz-transition: all, 0.3s;
     -ms-transition: all, 0.3s;
     -o-transition: all, 0.3s;
-    transition: all, 0.3s; }
-  .single-sub:hover .name {
+    transition: all, 0.3s;
+    background-color: #ffffff;
+    color: #316fb3; }
+    .single-sub .single-sub-wrapper .name {
+      font-size: 20px;
+      font-weight: 400; }
+    .single-sub .single-sub-wrapper .intro {
+      font-size: 16px;
+      color: #595959; }
+  .single-sub:hover .single-sub-wrapper {
+    border: 1px #316fb3 solid;
     background-color: #316fb3;
     color: #ffffff;
+    border-radius: 100px;
     -webkit-transition: all, 0.3s;
     -moz-transition: all, 0.3s;
     -ms-transition: all, 0.3s;
     -o-transition: all, 0.3s;
     transition: all, 0.3s; }
+    .single-sub:hover .single-sub-wrapper .intro {
+      color: #ffffff; }
   .single-sub .img-wrapper {
     width: 100%;
     height: 100%;
@@ -51,26 +66,5 @@ button {
     right: 0;
     width: 80%;
     height: 60%; }
-  .single-sub .name {
-    border: 1px #316fb3 solid;
-    border-radius: 100px;
-    font-size: 14px;
-    background-color: #ffffff;
-    color: #316fb3;
-    margin: 5% 18% 5% 18%;
-    font-weight: 400;
-    -webkit-transition: all, 0.3s;
-    -moz-transition: all, 0.3s;
-    -ms-transition: all, 0.3s;
-    -o-transition: all, 0.3s;
-    transition: all, 0.3s; }
-  .single-sub .intro {
-    font-size: 13px;
-    color: #595959;
-    -webkit-transition: all, 0.3s;
-    -moz-transition: all, 0.3s;
-    -ms-transition: all, 0.3s;
-    -o-transition: all, 0.3s;
-    transition: all, 0.3s; }
 
 /*# sourceMappingURL=SingleSubIndex.css.map */
