--- a/src/components/Index/SingleSubIndex.scss
+++ b/src/components/Index/SingleSubIndex.scss
@@ -7,16 +7,37 @@
   cursor: pointer;
   text-align: center;
 
-  &:hover {
-    .intro {
-      color: $main-color;
-      @include transition(all, 0.3s);
-    }
+  .single-sub-wrapper {
+    border: 1px $main-color solid;
+    border-radius: 100px;
+    margin: 4% 4%;
+    padding: 2% 0;
+    @include transition(all, 0.3s);
+    background-color: $white-color;
+    color: $main-color;
 
     .name {
+      font-size: 20px;
+      font-weight: 400;
+    }
+
+    .intro {
+      font-size: 16px;
+      color: $grey;
+    }
+  }
+
+  &:hover {
+    .single-sub-wrapper {
+      border: 1px $main-color solid;
       background-color: $main-color;
       color: $white-color;
+      border-radius: 100px;
       @include transition(all, 0.3s);
+
+      .intro {
+        color: $white-color;
+      }
     }
   }
 
@@ -32,20 +53,4 @@
     height: 60%;
   }
 
-  .name {
-    border: 1px $main-color solid;
-    border-radius: 100px;
-    font-size: 14px;
-    background-color: $white-color;
-    color: $main-color;
-    margin: 5% 18% 5% 18%;
-    font-weight: 400;
-    @include transition(all, 0.3s);
-  }
-
-  .intro {
-    font-size: 13px;
-    color: $grey;
-    @include transition(all, 0.3s);
-  }
 }
