--- a/src/components/Routine/ProvinceListTable.css
+++ b/src/components/Routine/ProvinceListTable.css
@@ -35,5 +35,9 @@ button {
     color: #595959;
     border-bottom: 1px #bababa solid;
     padding: 0.5% 5%; }
+    .province-list-table td a {
+      color: #316fb3;
+      text-decoration: none;
+      font-weight: 300; }
 
 /*# sourceMappingURL=ProvinceListTable.css.map */
