--- a/src/components/Routine/ProvinceListTable.scss
+++ b/src/components/Routine/ProvinceListTable.scss
@@ -21,5 +21,11 @@
     color: $grey;
     border-bottom: 1px $light-grey solid;
     padding: 0.5% 5%;
+
+    a{
+      color: $main-color;
+      text-decoration: none;
+      font-weight: 300;
+    }
   }
 }
