--- a/src/components/Train/Train.css
+++ b/src/components/Train/Train.css
@@ -35,4 +35,31 @@ button {
     text-decoration: none;
     font-weight: 400; }
 
+.train-table {
+  text-align: center;
+  margin: 2% auto;
+  width: 100%;
+  font-size: 90%;
+  font-weight: 400;
+  border-collapse: collapse;
+  color: #595959; }
+  .train-table caption {
+    color: #316fb3;
+    font-weight: 500;
+    font-size: 110%; }
+  .train-table th {
+    border: 1px #bababa solid;
+    padding: 0.5% 1%;
+    color: #316fb3;
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    -ms-transition: all 0.5s;
+    -o-transition: all 0.5s;
+    transition: all 0.5s;
+    cursor: pointer;
+    font-weight: 400; }
+  .train-table td {
+    border: 1px #bababa solid;
+    padding: 0.5% 1%; }
+
 /*# sourceMappingURL=Train.css.map */
