--- a/src/components/Train/Train.scss
+++ b/src/components/Train/Train.scss
@@ -22,3 +22,33 @@
     font-weight: 400;
   }
 }
+
+.train-table {
+  text-align: center;
+  margin: 2% auto;
+  width: 100%;
+  font-size: 90%;
+  font-weight: 400;
+  border-collapse: collapse;
+  color: $grey;
+
+  caption {
+    color: $main-color;
+    font-weight: 500;
+    font-size: 110%;
+  }
+
+  th {
+    border: 1px $light-grey solid;
+    padding: 0.5% 1%;
+    color: $main-color;
+    @include transition(all .5s);
+    cursor: pointer;
+    font-weight: 400;
+  }
+
+  td {
+    border: 1px $light-grey solid;
+    padding: 0.5% 1%;
+  }
+}
